# airborne

./: .dockerignore  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitmodules  .yarnrc.yml  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  Package.swift  README.md  cog.toml  flake.nix  package-lock.json  package.json  rust-toolchain.toml
airborne_authz_macros/: Cargo.toml
airborne_authz_macros/src/: lib.rs
airborne_server/: .env.docker.extra  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Project.md  README.md  docker-compose.yml  localhost:5433  realm-export.json  superposition-default-configs.json
airborne_server/cf_host/: package-lock.json  package.json  s3-server.js
airborne_server/docs_react/: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js
airborne_server/docs_react/public/: manifest.json
airborne_server/docs_react/scripts/: create-manifest.cjs
airborne_server/docs_react/src/: App.tsx
airborne_server/migrations/20250731104805_add_files_table/: up.sql
airborne_server/migrations/20250807101509_create_packages_table/: down.sql  up.sql
airborne_server/migrations/20250901122859_create_release_views/: down.sql
airborne_server/migrations/20250922105148_add_application_id_to_workspace_names/: down.sql
airborne_server/migrations/20250923115758_create_user_credentials/: down.sql  up.sql
airborne_server/migrations/20251006100000_add_builds_table/: down.sql  up.sql
airborne_server/migrations/20251006104648_make_tag_optional/: down.sql  up.sql
airborne_server/migrations/20251030123645_create_org_invites_table/: down.sql  up.sql
airborne_server/migrations/20251105092738_create_application_settings_table/: down.sql  up.sql
airborne_server/migrations/2026-02-13-094547_add_version_columns_to_builds/: down.sql  up.sql
airborne_server/migrations/2026-02-16-120000_add_status_to_builds/: down.sql  up.sql
airborne_server/migrations/2026-07-08-120000_add_webhooks/: down.sql  up.sql
airborne_server/migrations/20260123103412_create_package_groups/: down.sql  up.sql
airborne_server/migrations/20260220100000_add_status_to_files/: down.sql  up.sql
airborne_server/migrations/20260401120000_add_casbin_rule_and_workspace_uniqueness/: down.sql  up.sql
airborne_server/migrations/20260409163000_add_unique_org_app_index_workspace_names/: down.sql  up.sql
airborne_server/migrations/20260409193000_add_authz_bindings_and_memberships/: down.sql  up.sql
airborne_server/migrations/20260410120000_add_service_accounts/: down.sql  up.sql
airborne_server/migrations/20260414120000_add_webhooks_tables/: down.sql  up.sql
airborne_server/migrations/20260521122228_validation_functions/: down.sql  up.sql
airborne_server/migrations/20260714120000_add_signing_keys/: down.sql  up.sql
airborne_server/scripts/: aes_gcm_encrypt.py  encrypt-envs.sh  init-keycloak.sh  init-localstack.sh  upload_dummy_files.sh
airborne_server/src/: authz.rs  build.rs  config.rs  dashboard.rs  docs.rs  file.rs  main.rs  middleware.rs  organisation.rs  package.rs  release.rs  service_account.rs  signing.rs  token.rs  types.rs  user.rs  utils.rs  webhook.rs
airborne_server/src/authz/: types.rs
airborne_server/src/dashboard/: configuration.rs
airborne_server/src/file/: groups.rs  types.rs  utils.rs
airborne_server/src/middleware/: auth.rs  request.rs
airborne_server/src/organisation/: application.rs  transaction.rs  types.rs  user.rs
airborne_server/src/package/: types.rs  utils.rs
airborne_server/src/provider/: authn.rs  authz.rs
airborne_server/src/release/: types.rs  utils.rs
airborne_server/src/service_account/: types.rs  utils.rs
airborne_server/src/signing/: types.rs  utils.rs
airborne_server/src/token/: types.rs
airborne_server/src/user/: types.rs
airborne_server/src/utils/: advisory_lock.rs  db.rs  document.rs  encryption.rs  interceptor.rs  keycloak.rs  kms.rs  kronos.rs  mail.rs  metrics.rs  migrations.rs  moka.rs  redis.rs  s3.rs  semver.rs  superposition_provider.rs  transaction_manager.rs  workspace.rs
airborne_server/src/webhook/: dispatch.rs  dispatcher.rs  emit.rs  maintenance.rs  mw.rs  sign.rs  store.rs  types.rs
airborne_server/templates/: org_invitation.html  org_invitation.txt
analytics/: .env.example  .env.kafka-clickhouse  .env.victoria-metrics  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
analytics/src/: clickhouse.rs  config.rs  core.rs  error.rs  kafka.rs  main.rs  models.rs
analytics/src/common/: config.rs  error.rs  mod.rs  models.rs  utils.rs
analytics/src/core/: clickhouse.rs  kafka.rs  mod.rs  victoria.rs
analytics/src/handlers/: analytics.rs  events.rs  health.rs  mod.rs
diesel-shim/: Cargo.toml
diesel-shim/src/: lib.rs
server/: .dockerignore  .env.docker.extra  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  migration.txt  rust.nix  shell.nix  superposition-default-configs.json
server/dashboard_nextjs/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
server/dashboard_nextjs/app/: globals.css  layout.tsx  page.tsx
server/dashboard_nextjs/components/: file-creation-modal.tsx  shared-layout.tsx  theme-toggle.tsx
server/dashboard_nextjs/hooks/: use-toast.ts
server/dashboard_nextjs/lib/: api.ts  utils.ts
server/dashboard_nextjs/providers/: app-context.tsx
server/dashboard_nextjs/styles/: globals.css
server/dashboard_react/: package-lock.json  package.json  vite.config.ts
server/dashboard_react/src/: App.tsx  types.ts
server/docs_react/: .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
server/docs_react/public/: manifest.json
server/home_react/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
server/scripts/: encrypt_env.sh  init-keycloak.sh  init-localstack.sh  init-superposition.sh
server/src/: dashboard.rs  docs.rs  file.rs  home.rs  lib.rs  main.rs  organisation.rs  package.rs  release.rs  types.rs  user.rs  utils.rs
server/src/docs/: mod.rs
(+1114 files in other folders)
