[package]
name = "airborne_authz_macros"
description = "Procedural macros for airborne authorization"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
