[package]
name = "airborne_server"
description = "Airborne server"
version.workspace = true
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-web = "4"
aes-gcm = "0.10.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.81.0"
aws-sdk-kms = "1.65.0"
aws-sdk-s3 = "1.106.0"
aws-smithy-types = "1.2.5"
base64 = "0.22"
bytes = "1"
chrono = { workspace = true }
diesel = { version = "2.2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "serde_json",
    "chrono",
] }
diesel_migrations = "2.2"
dotenv = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
google-sheets4 = "=6.0.0"
hex = "0.4"
http = "0.2.12"
http-body = "1.0.1"
jsonwebtoken = "9.3.1"
keycloak = "=26.1.0"
log = "0.4.27"
r2d2 = "=0.8.10"
reqwest = { version = "^0.12.5", features = ["blocking", "stream"] }
rustls = { version = "0.23.5" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
superposition_sdk = "0.91.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "=0.2.3"
tracing-error = "=0.2.1"
tracing-actix-web = "=0.7.19"
url = "2.5.7"
urlencoding = "2.1.2"
uuid = { workspace = true }
zip = "4.6.1"