[package]
name = "airborne-server"
description = "Airborne server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-web = "4"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.81.0"
aws-sdk-kms = "1.65.0"
aws-sdk-s3 = "1.81.0"
aws-smithy-types = "1.2.5"
base64 = "0.22"
chrono = "0.4.41"
diesel = { version = "2.2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "serde_json",
    "chrono",
] }
diesel_migrations = "2.2"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
google-sheets4 = "*"
hex     = "0.4"
hyper = "^0.14"
jsonwebtoken = "9.3.1"
keycloak = "=26.1.0"
log = "0.4.27"
rand = "0.8"
reqwest = { version = "^0.12.5", features = ["blocking", "stream"] }
rustls = { version = "0.23.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
superposition_sdk = "0.88.1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
uuid = { version = "1.16.0", features = ["serde", "v7", "v4"] }
zip = "0.6"